--- a/src/style.css
+++ b/src/style.css
@@ -88,18 +88,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .todo-list__filtres {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .todo-list__input {
   padding: 3px;
-  margin-bottom: 10px;
-  border-radius: 3px;
-}
-
-.todo-list__button {
-  padding: 3px;
-  background-color: burlywood;
+  margin-bottom: 5px;
   border-radius: 3px;
 }
 
@@ -128,10 +122,12 @@ h1, h2, h3, h4, h5, h6 {
   color: gray;
 }
 
+.todo-list button,
 .todo-list__task button,
 .todo-list__filtres button {
   background-color: burlywood;
   padding: 3px;
+  border-radius: 3px;
 }
 
 .todo-list__task:last-child {
